# MCP-research-server-with-Gemini

./: .env.example  README.md  research_server.py  server_config.json
mcp_server/: pyproject.toml
mcp_server/mcp_project/: mcp_chatbot_gemini.py  server_config.json
