[project]
name = "mcp-server"
version = "0.1.0"
description = "Multi-agent control and paper research assistant server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "docling>=2.36.1",
    "google-genai>=1.18.0",
    "google-generativeai>=0.8.5",
    "mcp>=1.9.2",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
]
